# grayblock-rs

./: .env.example  .gitattributes  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/src/: main.rs  object_storage.rs
design/: Cargo.toml  index.html
design/src/: connect_button.rs  lib.rs  main.rs
frontend/: Cargo.toml  index.html
frontend/src/: app.rs  components.rs  home.rs  layout.rs  lib.rs  main.rs  pages.rs  router.rs  util.rs
frontend/src/components/: layout.rs  link.rs
frontend/src/pages/: dashboard.rs  learn.rs  not_found.rs  organization.rs  projects.rs  staking.rs
static/fonts/Manrope/: Manrope.css
static/fonts/Roboto/: Roboto.css
