[package]
name = "grayblock-backend"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
grayblock-frontend = { path = "../frontend" }
mogwai = "0.5.2"
once_cell = "1.8.0"
pretty_env_logger = "0.4.0"
surf = "2.3.2"
tide = "0.16.0"
