[package]
name = "grayblock-backend"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
grayblock-frontend = { path = "../frontend" }
log = "0.4"
mogwai = "0.5"
pretty_env_logger = "0.4"
rust-s3 = { version = "0.28.0", features = ["with-tokio"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3.2"
zenv = "0.7.1"
