[package]
name = "grayblock-frontend"
version = "0.0.0"
edition = "2021"
publish = false

[features]
default = ["console_error_panic_hook"]

[dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
console_log = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
mogwai = "0.5"
web3 = { version = "0.18.0", git = "https://github.com/tomusdrw/rust-web3.git", rev = "5f8b29e643964d4b0fbef683966a83c38c042603", default-features = false, features = [
    "wasm",
    "eip-1193",
    "signing",
] }
stylist = "0.9.2"
grayblock-design = { path = "../design" }

[dependencies.web-sys]
version = "^0.3"
# Add more web-sys API's as you need them
features = ["HtmlInputElement", "HashChangeEvent"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
