[package]
name = "grayblock-frontend"
version = "0.0.0"
edition = "2021"
publish = false

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
console_log = "0.2"
grayblock-design = { path = "../design" }
log = "0.4"
mogwai = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stylist = { version = "0.9.2", default-features = false, features = [
    "macros",
    "parser",
] }
wasm-bindgen = "0.2"
web3 = { version = "0.18.0", git = "https://github.com/tomusdrw/rust-web3.git", rev = "1f807bb7c288a1d2668c691839381786065b2eac", default-features = false, features = [
    "wasm",
    "eip-1193",
    "signing",
] }

[dependencies.web-sys]
version = "^0.3"
features = ["HtmlInputElement", "HashChangeEvent"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
